...
import RxSwift
import RxRelay

final class MainView: UIView {
    private let scrollView = ScrollView()
    private let elipseView = EllipseView()
    private let appNameLabel = UILabel()
    
    private let windowView = WindowView()
    private var priceButtonsHStack = UIStackView()
    let askButton = ConfigurationButton()
    let bidButton = ConfigurationButton()
    let favoriteCurrenciesTableView = UITableView()
    let addCurrencyButton = ConfigurationButton()
    let editButton = ConfigurationButton()
    let shareButton = ConfigurationButton()
    
    private let bottomLabelsVStack = UIStackView()
    private let lastUpdatedLabel = UILabel()
    let lastUpdatedSublabel = UILabel()
    
    let tapRecognizer = UITapGestureRecognizer()
    
    private var isWindowViewAnimationEnabled = false
    let isTableViewEditing = BehaviorRelay(value: false)
    
...
        windowView.addSubview(favoriteCurrenciesTableView)
        favoriteCurrenciesTableView.rowHeight = 70
        favoriteCurrenciesTableView.separatorStyle = .none
        favoriteCurrenciesTableView.allowsSelection = false
        favoriteCurrenciesTableView.alwaysBounceVertical = false
        favoriteCurrenciesTableView.showsVerticalScrollIndicator = false
        favoriteCurrenciesTableView.accessibilityIdentifier = "windowViewTableView"
        favoriteCurrenciesTableView.register(FavoriteCurrencyCell.self,
                                             forCellReuseIdentifier: FavoriteCurrencyCell.reuseIdentifier)
    }
    
    // MARK: windowView Subviews' Constraints
    private func addWindowSubviewsConstraints() {
...
