...
        topSublayer = layoutEllipseShapeLayer(
            path: topSublayersPath,
            color: UIColor.steelBlue.cgColor)
        [bottomSublayer, middleSublayer, topSublayer].forEach { shapeLayer in
            layer.addSublayer(shapeLayer)
        }
        accessibilityIdentifier = "topViewWithThreeLayers"
    }
    
    required init?(coder: NSCoder) {
        assert(false, "init(coder:) must not be used")
        super.init(coder: coder)
    }
...
